# cpsc587-asgn4

./: CMakeLists.txt
inc/: Boid.h  Camera.h  Engine.h  Mesh.h  Shader.h  Spring.h  TriangleMesh.h  VertexArray.h
inc/glad/: glad.h
rsc/: fragment.glsl  parameters.txt  pyrm.mtl  simple_fragment.glsl  simple_vertex.glsl  vertex.glsl
src/: Camera.cpp  Engine.cpp  Shader.cpp  TriangleMesh.cpp  VertexArray.cpp  glad.cpp  main.cpp
